# EDA_final

./: .gitignore  ICCAD_B.cpp  ICCAD_B_RESULT_OUT.cpp  Terminal.txt  case1_pinprojection_result.txt  case1_result.txt  case2_result.txt  case2_withpinprojection_result.txt  case2_withpinprojection_single_MRT_result.txt  case2_withpinprojection_single_result.txt  case_2222.txt  coss.txt  readme.md
ntuplace2/: Doxyfile  Makefile  Makefile.am  Makefile.in  README  aclocal.m4  config.h  config.status  configure  configure.in  libtool  ltmain.sh
ntuplace2/autom4te.cache/: output.0  traces.0
ntuplace2/src/: BinPacking.cpp  BinPacking.h  DPlace.cpp  DPlace.h  DiamondLegalizer.cpp  DiamondLegalizer.h  DiamondSearch.cpp  DiamondSearch.h  FMPart.cpp  FMPart.h  Makefile  Makefile.am  Makefile.in  MyNLP.cpp  MyNLP.h  ParamPlacement.cpp  ParamPlacement.h  ParserBookshelf.h  ParserIBMMix.cpp  ParserIBMMix.h  Partition.cpp  Partition.h  PlaceDBQP.cpp  PlaceDBQP.h  Placement.h  Prelegalizer.cpp  Prelegalizer.h  TetrisLegal.cpp  TetrisLegal.h  bbcellswap.cfg  bbcellswap.cpp  bbcellswap.h  bbsolve.h  cellmoving.cpp  cellmoving.h  cluster.cpp  cluster.h  defrw.cpp  detail.cpp  detail.h  (+36 more)
results/: 163_[byter]_ProblemB_case1-terminal_lookup2times_RESULT_result.txt  31337755_[byter]_ProblemB_case2-terminal_afterplaceTOP_RESULT_result.txt  3288491930_ProblemB_case3_result.txt  33924827_[byter + !better]_ProblemB_case2-terminal_lookup2times_RESULT_result.txt  34168415_[singlepin]_ProblemB_case2-terminal_afterplaceTOPBOT_RESULTbetter_result.txt  34217963_[singlepin]_ProblemB_case2-terminal_afterplaceTOPBOT_RESULT_result.txt  35082392_ProblemB_case2-terminal_afterplaceTOPBOT_RESULT_result.txt  35761064_ProblemB_case2-terminal_afterplaceTOPBOT_RESULTbetter_result.txt  42730381_[allpin]_ProblemB_case2-terminal_afterplaceTOPBOT_RESULTbetter_result.txt  42777818_[allpin]_ProblemB_case2-terminal_afterplaceTOPBOT_RESULT_result.txt  (+2 more)
(+37 files in other folders)
